--- a/WINAPI_Algorithm/WINAPI_Algorithm/WINAPI_Algorithm.vcxproj
+++ b/WINAPI_Algorithm/WINAPI_Algorithm/WINAPI_Algorithm.vcxproj
@@ -147,6 +147,7 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClInclude Include="Scene\CollisionScene.h" />
     <ClInclude Include="FrameWork\Circle.h" />
     <ClInclude Include="FrameWork\Rect.h" />
     <ClInclude Include="Scene\Scene.h" />
@@ -156,9 +157,11 @@
     <ClInclude Include="Resource.h" />
     <ClInclude Include="targetver.h" />
     <ClInclude Include="FrameWork\Vector2.h" />
+    <ClInclude Include="Types.h" />
     <ClInclude Include="WINAPI_Algorithm.h" />
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="Scene\CollisionScene.cpp" />
     <ClCompile Include="FrameWork\Circle.cpp" />
     <ClCompile Include="FrameWork\Rect.cpp" />
     <ClCompile Include="Scene\Scene.cpp" />
