--- a/WINAPI_Algorithm/WINAPI_Algorithm/WINAPI_Algorithm.vcxproj
+++ b/WINAPI_Algorithm/WINAPI_Algorithm/WINAPI_Algorithm.vcxproj
@@ -147,6 +147,10 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClInclude Include="Object\Maze\Maze.h" />
+    <ClInclude Include="Object\Maze\Block.h" />
+    <ClInclude Include="Object\Maze\Player.h" />
+    <ClInclude Include="Scene\MazeScene.h" />
     <ClInclude Include="Object\Bullet.h" />
     <ClInclude Include="Object\Barrel.h" />
     <ClInclude Include="Scene\CannonScene.h" />
@@ -169,6 +173,10 @@
     <ClInclude Include="WINAPI_Algorithm.h" />
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="Object\Maze\Maze.cpp" />
+    <ClCompile Include="Object\Maze\Block.cpp" />
+    <ClCompile Include="Object\Maze\Player.cpp" />
+    <ClCompile Include="Scene\MazeScene.cpp" />
     <ClCompile Include="Object\Bullet.cpp" />
     <ClCompile Include="Object\Barrel.cpp" />
     <ClCompile Include="Scene\CannonScene.cpp" />
