--- a/WINAPI_Algorithm/Algorithm/Algorithm.vcxproj.filters
+++ b/WINAPI_Algorithm/Algorithm/Algorithm.vcxproj.filters
@@ -48,5 +48,11 @@
     <ClCompile Include="Babbling.cpp">
       <Filter>소스 파일</Filter>
     </ClCompile>
+    <ClCompile Include="QuickSort.cpp">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
+    <ClCompile Include="MergeSort.cpp">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
