--- a/WINAPI_Algorithm/Algorithm/Algorithm.vcxproj.filters
+++ b/WINAPI_Algorithm/Algorithm/Algorithm.vcxproj.filters
@@ -66,6 +66,9 @@
     <ClCompile Include="DP(1).cpp">
       <Filter>소스 파일</Filter>
     </ClCompile>
+    <ClCompile Include="DP%282%29.cpp">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="BinarySearchTree.h">
